--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    I used a quadratic function for the color gradient
+		    Gradient
 	    </footer>
 	</body>
 </html>
